# Proyecto3_Analisi

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  testPlot
doxygen/html/: _matrix_8hpp_source.html  annotated.html  classanpi_1_1_matrix-members.html  classanpi_1_1_matrix.html  classedge_node-members.html  classedge_node.html  classes.html  classliebmann-members.html  classliebmann.html  classplotpy_1_1_plot_quiver-members.html  classplotpy_1_1_plot_quiver.html  classuser_interface-members.html  classuser_interface.html  dir_41ff596e7b0de9b18739e33860473fce.html  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_4e4e2e75df7fa6971448b424c011c8b5.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_aebb8dcc11953d78e620bbef0b9e2183.html  dir_e541f531fbe75075584746358fbe886b.html  edge_node_8h_source.html  files.html  functions.html  functions_enum.html  functions_func.html  graph_legend.html  index.html  liebmann_8h_source.html  namespaceanpi.html  namespaceplotpy.html  namespaces.html  plot_quiver_8h_source.html  user_interface_8h_source.html
doxygen/html/search/: all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_d.js  classes_0.js  classes_1.js  classes_3.js  enums_0.js  functions_3.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  namespaces_1.js  (+1 more)
src/: CMakeLists.txt  main.cpp
src/GUI/: userInterface.cpp  userInterface.h
src/Process/: edgeNode.cpp  edgeNode.h  liebmann.cpp  liebmann.h
src/core/: Matrix.hpp  Matrix.tpp  plotQuiver.h  quiver.py
